--- a/frontend/components/level/views/level.html
+++ b/frontend/components/level/views/level.html
@@ -1,13 +1,13 @@
 
 
 <button ng-click="loadInsertedLevel()" type="button" class="btn btn-primary pull-right" data-animation="am-fade-and-scale" data-template="frontend/components/level/views/level.create.html" data-placement="center" bs-modal="modal">
-    <i class="fa fa-graduation-cap"></i> Créer Niveau
+    <i class="fa fa-graduation-cap"></i> Créer Métier
 </button>
 
 <br/><br/>
 <table ng-table  class="table table-bordered table-hover">
      <tr ng-repeat="level in levels">
-         <td data-title="'Niveau'">
+         <td data-title="'Métier'">
            {{level._id}}
           </td>
 
