--- a/frontend/components/payment/views/payment.step1.html
+++ b/frontend/components/payment/views/payment.step1.html
@@ -31,72 +31,73 @@
             <tbody>
               <tr>
                 <th>
-                  Scolarité
+                  Mois 1
                 </th>
                 <td>
-                  <label class="btn btn-default"><input ng-disabled="toPayStudent.products.t1.s" ng-click="confirmProduct('t1','s')" type="checkbox" value="t1.s"></label>
+                  <label class="btn btn-default"><input ng-disabled="toPayStudent.products.t1.s" ng-click="confirmProduct('t1','s')" type="checkbox" value="t1.s"></label> Janvier
 
                 </td>
                 <td>
-                  <label class="btn btn-default"><input ng-disabled="toPayStudent.products.t2.s||!toPayStudent.products.t1.s" ng-click="confirmProduct('t2','s')" type="checkbox" value="t2.s"></label>
+                  <label class="btn btn-default"><input ng-disabled="toPayStudent.products.t2.s||!toPayStudent.products.t1.s" ng-click="confirmProduct('t2','s')" type="checkbox" value="t2.s"></label> Mai
 
                 </td>
                 <td>
-                  <label class="btn btn-default"><input ng-disabled="toPayStudent.products.t3.s||!toPayStudent.products.t2.s" ng-click="confirmProduct('t3','s')" type="checkbox" value="t3.s"></label>
+                  <label class="btn btn-default"><input ng-disabled="toPayStudent.products.t3.s||!toPayStudent.products.t2.s" ng-click="confirmProduct('t3','s')" type="checkbox" value="t3.s"></label> Septembre
 
                 </td>
               </tr>
               <tr>
                 <th>
-                  Cantine
+                  Mois 2
                 </th>
                 <td>
-                  <label class="btn btn-default"><input ng-disabled="toPayStudent.products.t1.c" ng-click="confirmProduct('t1','c')" type="checkbox" value="t1.c"></label>
+                  <label class="btn btn-default"><input ng-disabled="toPayStudent.products.t1.c" ng-click="confirmProduct('t1','c')" type="checkbox" value="t1.c"></label> Fevrier
 
                 </td>
                 <td>
-                  <label class="btn btn-default"><input ng-disabled="toPayStudent.products.t2.c" ng-click="confirmProduct('t2','c')" type="checkbox" value="t2.c"></label>
+                  <label class="btn btn-default"><input ng-disabled="toPayStudent.products.t2.c" ng-click="confirmProduct('t2','c')" type="checkbox" value="t2.c"></label> Juin
 
                 </td>
                 <td>
-                  <label class="btn btn-default"><input ng-disabled="toPayStudent.products.t3.c" ng-click="confirmProduct('t3','c')" type="checkbox" value="t3.c"></label>
+                  <label class="btn btn-default"><input ng-disabled="toPayStudent.products.t3.c" ng-click="confirmProduct('t3','c')" type="checkbox" value="t3.c"></label> Octobre
 
                 </td>
               </tr>
               <tr>
                 <th>
-                  Panier
+                  Mois 3
                 </th>
                 <td>
-                  <label class="btn btn-default"><input ng-disabled="toPayStudent.products.t1.p" ng-click="confirmProduct('t1','p')" type="checkbox" value="t1.p"></label>
+                  <label class="btn btn-default"><input ng-disabled="toPayStudent.products.t1.p" ng-click="confirmProduct('t1','p')" type="checkbox" value="t1.p"></label> Mars
 
                 </td>
                 <td>
-                  <label class="btn btn-default"><input ng-disabled="toPayStudent.products.t2.p" ng-click="confirmProduct('t2','p')" type="checkbox" value="t2.p"></label>
+                  <label class="btn btn-default"><input ng-disabled="toPayStudent.products.t2.p" ng-click="confirmProduct('t2','p')" type="checkbox" value="t2.p"></label> Juillet
 
                 </td>
                 <td>
-                  <label class="btn btn-default"><input ng-disabled="toPayStudent.products.t3.p" ng-click="confirmProduct('t3','p')" type="checkbox" value="t3.p"></label>
+                  <label class="btn btn-default"><input ng-disabled="toPayStudent.products.t3.p" ng-click="confirmProduct('t3','p')" type="checkbox" value="t3.p"></label> Novembre
 
                 </td>
               </tr>
               <tr>
                 <th>
-                  Garderie
+                  Mois 4
                 </th>
                 <td>
-                  <label class="btn btn-default"><input ng-disabled="toPayStudent.products.t1.g" ng-click="confirmProduct('t1','g')" type="checkbox" value="t1.g"></label>
+                  <label class="btn btn-default"><input ng-disabled="toPayStudent.products.t1.g" ng-click="confirmProduct('t1','g')" type="checkbox" value="t1.g"></label> Avril
 
                 </td>
                 <td>
-                  <label class="btn btn-default"><input ng-disabled="toPayStudent.products.t2.g" ng-click="confirmProduct('t2','g')" type="checkbox" value="t2.g"></label>
+                  <label class="btn btn-default"><input ng-disabled="toPayStudent.products.t2.g" ng-click="confirmProduct('t2','g')" type="checkbox" value="t2.g"></label> Aout
 
                 </td>
                 <td>
-                  <label class="btn btn-default"><input ng-disabled="toPayStudent.products.t3.g" ng-click="confirmProduct('t3','g')" type="checkbox" value="t3.g"></label>
+                  <label class="btn btn-default"><input ng-disabled="toPayStudent.products.t3.g" ng-click="confirmProduct('t3','g')" type="checkbox" value="t3.g"></label> Decembre
 
                 </td>
               </tr>
+             <!-- 
               <tr>
                 <th>
                   Activité
@@ -111,6 +112,7 @@
                   <label class="btn btn-default"><input ng-disabled="toPayStudent.products.t3.a" ng-click="confirmProduct('t3','a')" type="checkbox" value="t3.a"></label>
                 </td>
               </tr>
+              -->
             </tbody>
 
           </table>
