--- a/frontend/components/level/views/level.confirm.html
+++ b/frontend/components/level/views/level.confirm.html
@@ -5,11 +5,11 @@
 
       <div class="modal-header">
         <button type="button" class="close" aria-label="Close" ng-click="$hide()"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title">Supprimer Niveau</h4>
+        <h4 class="modal-title">Supprimer Métier</h4>
       </div>
 
   <div class="modal-body">
-    <h4> Voulez-vous supprimer le niveau <b>{{toDeleteLevel._id}} </b>? </h4>
+    <h4> Voulez-vous supprimer le Métier <b>{{toDeleteLevel._id}} </b>? </h4>
   </div>
           <div class="modal-footer">
 
