--- a/frontend/components/level/views/level.edit.html
+++ b/frontend/components/level/views/level.edit.html
@@ -5,7 +5,7 @@
 
       <div class="modal-header">
         <button type="button" class="close" aria-label="Close" ng-click="$hide()"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title">Modifier prix : <b>{{toEditLevel._id}}</b></h4>
+        <h4 class="modal-title">Modifier prix des Métiers : <b>{{toEditLevel._id}}</b></h4>
       </div>
 
   <div class="modal-body">
