--- a/frontend/components/student/views/student.confirm.html
+++ b/frontend/components/student/views/student.confirm.html
@@ -5,11 +5,11 @@
 
       <div class="modal-header">
         <button type="button" class="close" aria-label="Close" ng-click="$hide()"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title">Supprimer Eleve</h4>
+        <h4 class="modal-title">Supprimer Employé</h4>
       </div>
 
   <div class="modal-body">
-    <h4> Voulez-vous supprimer l'eleve <b>{{toDeleteStudent.firstname}} </b>? </h4>
+    <h4> Voulez-vous supprimer l'Employé <b>{{toDeleteStudent.firstname}} </b>? </h4>
   </div>
           <div class="modal-footer">
 
