--- a/frontend/components/student/views/student.create.html
+++ b/frontend/components/student/views/student.create.html
@@ -5,7 +5,7 @@
 
       <div class="modal-header">
         <button type="button" class="close" aria-label="Close" ng-click="$hide()"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title">Créer Eleve</h4>
+        <h4 class="modal-title">Créer Employé</h4>
       </div>
 
   <div class="modal-body">
@@ -14,11 +14,11 @@
           Nom:    <input type="text" class="form-control" ng-model="toInserStudent.firstname"/>
           Prenom: <input type="text" class="form-control" ng-model="toInserStudent.lastname"/>
 
-          Niveau: <select ng-model="toInserStudent._levelId" class="form-control" ng-options="level._id as level._id for level in levels">
+          Métier  <select ng-model="toInserStudent._levelId" class="form-control" ng-options="level._id as level._id for level in levels">
           		    </select>
-
+<!--  deleted for employee
           Classe: <select ng-model="toInserStudent.class" class="form-control" ng-options="class._id as class._id for class in classes">
-          		    </select>
+          		    </select>  -->
         </form>
 
   </div>
