--- a/frontend/components/student/views/student.edit.html
+++ b/frontend/components/student/views/student.edit.html
@@ -5,16 +5,16 @@
 
       <div class="modal-header">
         <button type="button" class="close" aria-label="Close" ng-click="$hide()"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title">Modifier L'Eleve : <b>{{toEditStudent.firstname}} {{toEditStudent.lastname}} </b></h4>
+        <h4 class="modal-title">Modifier L'Employé : <b>{{toEditStudent.firstname}} {{toEditStudent.lastname}} </b></h4>
       </div>
 
       <div class="modal-body">
 
-          <b>Niveau:</b> <select ng-model="toEditStudent._levelId" class="form-control" ng-options="level._id as level._id for level in levels">
+          <b>Métier</b> <select ng-model="toEditStudent._levelId" class="form-control" ng-options="level._id as level._id for level in levels">
                   </select>
-
+<!--
           <b>Classe:</b> <select ng-model="toEditStudent.class" class="form-control" ng-options="class._id as class._id for class in classes">
-                  </select>
+                  </select> -->
                   <br/>
 
         <form role="form">
