--- a/frontend/components/level/views/level.create.html
+++ b/frontend/components/level/views/level.create.html
@@ -37,13 +37,13 @@
                     <i class="fa fa-calendar">Mois 1</i>
                 </th>
                 <td>
-                  <input type="number" class="form-control" ng-model="toInserLevel.price.t1.s"/>
+                  <input type="number" class="form-control" ng-model="toInserLevel.price.t1.janvier"/> Janvier
                 </td>
                 <td>
-                  <input type="number" class="form-control" ng-model="toInserLevel.price.t2.s"/>
+                  <input type="number" class="form-control" ng-model="toInserLevel.price.t2.mai"/> Mai
                 </td>
                 <td>
-                  <input type="number" class="form-control" ng-model="toInserLevel.price.t3.s"/>
+                  <input type="number" class="form-control" ng-model="toInserLevel.price.t3.septembre"/> Septembre
                 </td>
               </tr>
               <tr>
@@ -51,13 +51,13 @@
                     <i class="fa fa-calendar">Mois 2</i>
                 </th>
                 <td>
-                  <input type="number" class="form-control" ng-model="toInserLevel.price.t1.c"/>
+                  <input type="number" class="form-control" ng-model="toInserLevel.price.t1.fevrier"/> Fevrier
                 </td>
                 <td>
-                  <input type="number" class="form-control" ng-model="toInserLevel.price.t2.c"/>
+                  <input type="number" class="form-control" ng-model="toInserLevel.price.t2.juin"/> Juin
                 </td>
                 <td>
-                  <input type="number" class="form-control" ng-model="toInserLevel.price.t3.c"/>
+                  <input type="number" class="form-control" ng-model="toInserLevel.price.t3.octobre"/> Octobre
                 </td>
               </tr>
               <tr>
@@ -65,13 +65,13 @@
                     <i class="fa fa-calendar">Mois 3</i>
                 </th>
                 <td>
-                  <input type="number" class="form-control" ng-model="toInserLevel.price.t1.p"/>
+                  <input type="number" class="form-control" ng-model="toInserLevel.price.t1.mars"/> Mars
                 </td>
                 <td>
-                  <input type="number" class="form-control" ng-model="toInserLevel.price.t2.p"/>
+                  <input type="number" class="form-control" ng-model="toInserLevel.price.t2.juillet"/> Juillet
                 </td>
                 <td>
-                  <input type="number" class="form-control" ng-model="toInserLevel.price.t3.p"/>
+                  <input type="number" class="form-control" ng-model="toInserLevel.price.t3.novembre"/> Novembre
                 </td>
               </tr>
               <tr>
@@ -80,13 +80,13 @@
 
                 </th>
                 <td>
-                  <input type="number" class="form-control" ng-model="toInserLevel.price.t1.g"/>
+                  <input type="number" class="form-control" ng-model="toInserLevel.price.t1.avril"/> Avril
                 </td>
                 <td>
-                  <input type="number" class="form-control" ng-model="toInserLevel.price.t2.g"/>
+                  <input type="number" class="form-control" ng-model="toInserLevel.price.t2.aout"/> Aout
                 </td>
                 <td>
-                  <input type="number" class="form-control" ng-model="toInserLevel.price.t3.g"/>
+                  <input type="number" class="form-control" ng-model="toInserLevel.price.t3.decembre"/> Decembre
                 </td>
               </tr>
               <!--
