--- a/frontend/components/level/views/level.edit.html
+++ b/frontend/components/level/views/level.edit.html
@@ -31,72 +31,58 @@
             <tbody>
               <tr>
                 <th>
-                  Scolarité
+                  Mois 1
                 </th>
                 <td>
-                  <input type="number" class="form-control" ng-model="toEditLevel.price.t1.s"/>
+                  <input type="number" class="form-control" ng-model="toEditLevel.price.t1.janvier"/> Janvier
                 </td>
                 <td>
-                  <input type="number" class="form-control" ng-model="toEditLevel.price.t2.s"/>
+                  <input type="number" class="form-control" ng-model="toEditLevel.price.t2.mai"/> Mai
                 </td>
                 <td>
-                  <input type="number" class="form-control" ng-model="toEditLevel.price.t3.s"/>
+                  <input type="number" class="form-control" ng-model="toEditLevel.price.t3.septembre"/> Septembre
                 </td>
               </tr>
               <tr>
                 <th>
-                  Cantine
+                  Mois 2
                 </th>
                 <td>
-                  <input type="number" class="form-control" ng-model="toEditLevel.price.t1.c"/>
+                  <input type="number" class="form-control" ng-model="toEditLevel.price.t1.fevrier"/> Fevrier
                 </td>
                 <td>
-                  <input type="number" class="form-control" ng-model="toEditLevel.price.t2.c"/>
+                  <input type="number" class="form-control" ng-model="toEditLevel.price.t2.juin"/> Juin
                 </td>
                 <td>
-                  <input type="number" class="form-control" ng-model="toEditLevel.price.t3.c"/>
+                  <input type="number" class="form-control" ng-model="toEditLevel.price.t3.octobre"/> Octobre
                 </td>
               </tr>
               <tr>
                 <th>
-                  Panier
+                  Mois 3
                 </th>
                 <td>
-                  <input type="number" class="form-control" ng-model="toEditLevel.price.t1.p"/>
+                  <input type="number" class="form-control" ng-model="toEditLevel.price.t1.mars"/> Mars
                 </td>
                 <td>
-                  <input type="number" class="form-control" ng-model="toEditLevel.price.t2.p"/>
+                  <input type="number" class="form-control" ng-model="toEditLevel.price.t2.juillet"/> Juillet
                 </td>
                 <td>
-                  <input type="number" class="form-control" ng-model="toEditLevel.price.t3.p"/>
+                  <input type="number" class="form-control" ng-model="toEditLevel.price.t3.novembre"/> Novembre
                 </td>
               </tr>
               <tr>
                 <th>
-                  Garderie
+                  Mois 4
                 </th>
                 <td>
-                  <input type="number" class="form-control" ng-model="toEditLevel.price.t1.g"/>
+                  <input type="number" class="form-control" ng-model="toEditLevel.price.t1.avril"/> Avril
                 </td>
                 <td>
-                  <input type="number" class="form-control" ng-model="toEditLevel.price.t2.g"/>
+                  <input type="number" class="form-control" ng-model="toEditLevel.price.t2.aout"/> Aout
                 </td>
                 <td>
-                  <input type="number" class="form-control" ng-model="toEditLevel.price.t3.g"/>
-                </td>
-              </tr>
-              <tr>
-                <th>
-                  Activité
-                </th>
-                <td>
-                  <input type="number" class="form-control" ng-model="toEditLevel.price.t1.a"/>
-                </td>
-                <td>
-                  <input type="number" class="form-control" ng-model="toEditLevel.price.t2.a"/>
-                </td>
-                <td>
-                  <input type="number" class="form-control" ng-model="toEditLevel.price.t3.a"/>
+                  <input type="number" class="form-control" ng-model="toEditLevel.price.t3.decembre"/> Decembre
                 </td>
               </tr>
             </tbody>
