--- a/frontend/components/payment/views/payment.html
+++ b/frontend/components/payment/views/payment.html
@@ -1,8 +1,7 @@
 
 <table ng-table="tableParams" class="table table-bordered table-hover" show-filter="true">
   <tr ng-repeat="student in $data" ng-click="confirmStart(student)">
-    <td data-title="'Niveau'" class="ng-table-group" filter="{ '_levelId': 'select' }" filter-data="levels">{{student._levelId}}</td>
-    <td data-title="'Classe'" class="ng-table-group" filter="{ 'class': 'select' }" filter-data="classes">{{student.class}}</td>
+    <td data-title="'Métier'" class="ng-table-group" filter="{ '_levelId': 'select' }" filter-data="levels">{{student._levelId}}</td>
     <td data-title="'Nom'" class="ng-table-group" filter="{ 'firstname': 'text' }" sortable="'firstname'">{{student.firstname}}</td>
     <td data-title="'Prenom'" class="ng-table-group" filter="{ 'lastname': 'text' }"sortable="'lastname'">{{student.lastname}}</td>
   </tr>
