--- a/frontend/components/student/views/student.edit.html
+++ b/frontend/components/student/views/student.edit.html
@@ -38,61 +38,61 @@
             <tbody>
               <tr>
                 <th>
-                  Scolarité
+                  Mois 1
                 </th>
                 <td>
-                  <input type="number" class="form-control" ng-model="toEditStudent.price.t1.s"/>
+                  <input type="number" class="form-control" ng-model="toEditStudent.price.t1.janvier"/> Janvier
                 </td>
                 <td>
-                  <input type="number" class="form-control" ng-model="toEditStudent.price.t2.s"/>
+                  <input type="number" class="form-control" ng-model="toEditStudent.price.t2.mai"/> Mai
                 </td>
                 <td>
-                  <input type="number" class="form-control" ng-model="toEditStudent.price.t3.s"/>
+                  <input type="number" class="form-control" ng-model="toEditStudent.price.t3.septembre"/> Septembre
                 </td>
               </tr>
               <tr>
                 <th>
-                  Cantine
+                  Mois 2
                 </th>
                 <td>
-                  <input type="number" class="form-control" ng-model="toEditStudent.price.t1.c"/>
+                  <input type="number" class="form-control" ng-model="toEditStudent.price.t1.fevrier"/> Fevrier
                 </td>
                 <td>
-                  <input type="number" class="form-control" ng-model="toEditStudent.price.t2.c"/>
-                </td>
+                  <input type="number" class="form-control" ng-model="toEditStudent.price.t2.juin"/> Juin
+                </td> 
                 <td>
-                  <input type="number" class="form-control" ng-model="toEditStudent.price.t3.c"/>
+                  <input type="number" class="form-control" ng-model="toEditStudent.price.t3.octobre"/> Octobre
                 </td>
               </tr>
               <tr>
                 <th>
-                  Panier
+                  Mois 3
                 </th>
                 <td>
-                  <input type="number" class="form-control" ng-model="toEditStudent.price.t1.p"/>
+                  <input type="number" class="form-control" ng-model="toEditStudent.price.t1.mars"/> Mars
+                </td> 
+                <td>
+                  <input type="number" class="form-control" ng-model="toEditStudent.price.t2.juillet"/> Juillet
                 </td>
                 <td>
-                  <input type="number" class="form-control" ng-model="toEditStudent.price.t2.p"/>
-                </td>
-                <td>
-                  <input type="number" class="form-control" ng-model="toEditStudent.price.t3.p"/>
+                  <input type="number" class="form-control" ng-model="toEditStudent.price.t3.novembre"/> Novembre
                 </td>
               </tr>
               <tr>
                 <th>
-                  Garderie
+                  Mois 4
                 </th>
                 <td>
-                  <input type="number" class="form-control" ng-model="toEditStudent.price.t1.g"/>
-                </td>
+                  <input type="number" class="form-control" ng-model="toEditStudent.price.t1.avril"/> Avril
+                </td> 
                 <td>
-                  <input type="number" class="form-control" ng-model="toEditStudent.price.t2.g"/>
-                </td>
+                  <input type="number" class="form-control" ng-model="toEditStudent.price.t2.aout"/> Aout
+                </td> 
                 <td>
-                  <input type="number" class="form-control" ng-model="toEditStudent.price.t3.g"/>
+                  <input type="number" class="form-control" ng-model="toEditStudent.price.t3.decembre"/> Decembre
                 </td>
               </tr>
-              <tr>
+             <!-- <tr>
                 <th>
                   Activité
                 </th>
@@ -105,7 +105,7 @@
                 <td>
                   <input type="number" class="form-control" ng-model="toEditStudent.price.t3.a"/>
                 </td>
-              </tr>
+              </tr> -->
             </tbody>
 
           </table>
